Added functional chat ui
