# src/main/java/pl/dolien/echohub/user/UserController.java
@@ -6,6 +6,7 @@ import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import pl.dolien.echohub.user.dto.UserResponse;
 
 import java.util.List;
 
